[metadata]
name = openfido
version = attr: openfido.__version__
author = SLAC National Accelerator Laboratory
author_email = openfido@slac.stanford.edu
description = Open Framework for Integration Data Operation (OpenFIDO) API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openfido/cli
project_urls =
	Bug Tracker = https://github.com/openfido/cli/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.9

[options.packages.find]
where = src
